  The node having the id attribute "nonsupportmessage" will disappear after page generating. If you
  require to the another id value, you can set it into params.php as the value "$nonSupportMessageId".
- Creating Cross Table. It contains 3 contexts for colomn, row and value cells.
  See the sample Samples/Practices/crosstable.html.
- The variable "$valuesForLocalContext" in params.php supplies initial values for local context.
  The value of this variable has to be an associated array with key and value.
- Support the script parameters for FileMaker Server (controlled by 'parameter' key of 'script' key).
- FileUploader can detect exceeding file size limit and returns valid error messages.
- New Sample "Sample_API" is added. This is for explanation of server-side apis.
- On the Master-Detail style UI, the scrolled point in Master display can be retrieved when the page
  is backed from the Detail display.
- Add "CWPKit" in "lib" directory for FileMaker Server to remove a dependency of FX.php in the future.
- [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
  Authentication for mobile devices. The affected version is 5.3 only.
- [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
- [BUG FIX] String array value for single value operator works fine.
- [BUG FIX] Modify the value of INTERMediatorOnPage.getIMRootPath on Windows Server.
- [BUG FIX] Update FX.php to fix compatibility with authentication for FileMaker Server.
- [BUG FIX] Enrolment methods had a bug in case of FileMaker Server with issuedhash for SQLite.

Ver.5.3 (February 21, 2016)
- Support OAuth2 with OAuthAuth.php class and the sample redirected page is OAuthCatcher.php
  in the Auth_Support directory.
- Master/Detail style UI (controlled by 'navi-control' key) support mobile environment ex. JQuery Mobile.
  The Samples/Sample_Mobile folder includes some demos for mobile device.