@@ -183,9 +183,11 @@ var IMLibElement = {
         if (nodeTag === "INPUT" || nodeTag === "SELECT" || nodeTag === "TEXTAREA") {
             INTERMediatorLib.addEvent(element, "blur", function (e) {
                 var idValue = element.id;
-                if (!IMLibUI.valueChange(idValue, true)) {
-                    element.focus();
-                }
+                return (function() {
+                    if (!IMLibUI.valueChange(idValue, true)) {
+                        element.focus();
+                    }
+                })();
             });
         }
         return needPostValueSet;
