@@ -146,6 +146,15 @@ $defContexts = array(
         ),
     ),
     array(
+        'name' => 'local-context',
+        'records' => 100000,
+        'key' => 'id',
+        'repeat-control' => 'confirm-delete confirm-insert',
+        'relation' => array(
+            array('foreign-key' => 'context_id', 'join-field' => 'id', 'operator' => '='),
+        ),
+    ),
+    array(
         'name' => 'dbsettings',
         'records' => 100000,
         'key' => 'id',
@@ -165,4 +174,4 @@ if (php_uname('n') === 'inter-mediator-server' && $_SERVER['SERVER_ADDR'] === '1
 /**
  * Don't remove comment slashes below on any 'release.'
  */
-//IM_Entry($defContexts, null, array('db-class' => 'DefEditor'), false);
+IM_Entry($defContexts, null, array('db-class' => 'DefEditor'), false);
