@@ -181,7 +181,8 @@ $pusherParameters = array(
 // $oAuthClientSecret = '';
 // $oAuthRedirect = 'http://localhost:7001/Auth_Support/OAuthCatcher.php';
 
-$valuesForLocalContext = array(
-    "pagetitle" => "INTER-Mediator Samples",
-    "copyright" => "INTER-Mediator Directive Committee",
-);
+/* Initial values for local context with their keys. */
+//$valuesForLocalContext = array(
+//    "pagetitle" => "INTER-Mediator Samples",
+//    "copyright" => "INTER-Mediator Directive Committee",
+//);
